--- a/paper/cite.bib
+++ b/paper/cite.bib
@@ -242,3 +242,10 @@
   journal={arXiv preprint arXiv:1505.00387},
   year={2015}
 }
+@inproceedings{huang2017densely,
+  title={Densely connected convolutional networks},
+  author={Huang, Gao and Liu, Zhuang and Van Der Maaten, Laurens and Weinberger, Kilian Q},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={4700--4708},
+  year={2017}
+}
